Submenu text alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,7 @@ html, body {
     opacity: 0.8;
 }
 
+.pure-menu-item-left {
+    text-align: left;
+}
+
